--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Build Javascript bundle
         run: deno bundle --platform=browser src/ts/staticweb/main.ts -o src/ts/staticweb/bundle.js
 
+      - name: Copy template
+        run: cp templates/index-5-29.html src/ts/staticweb/index-5-29.html
+
       - uses: actions/setup-node@v5
         with:
           node-version: 20
